--- a/Homepage/Games/notecard-inc/Style.css
+++ b/Homepage/Games/notecard-inc/Style.css
@@ -8,3 +8,12 @@
 .save {
     height: 1000px;
 }
+
+#div {
+    width: 300px;
+    border: 4px solid rgb(0, 0, 0);
+    padding: 5px;
+    height: 50%;
+    margin: 10px;
+    float: right;
+}
