--- a/Homepage/Games/notecard-inc/Style.css
+++ b/Homepage/Games/notecard-inc/Style.css
@@ -17,3 +17,11 @@
     margin: 10px;
     float: right;
 }
+
+#popup {
+    width: 100%;
+    height: 100%;
+    position:fixed;
+    opacity: .5;
+    background-color: black;
+}
