--- a/Homepage/Games/notecard-inc/Style.css
+++ b/Homepage/Games/notecard-inc/Style.css
@@ -18,10 +18,21 @@
     float: right;
 }
 
-#popup {
-    width: 100%;
-    height: 100%;
-    position:fixed;
-    opacity: .5;
-    background-color: black;
+#reward {
+    opacity: 0;
+}
+
+@keyframes fadeIn {
+    0% {opacity: 0;}
+    100% {opacity: 1;}
+}
+
+@keyframes fadeOut {
+    0% {opacity: 1;}
+    100% {opacity: 0;}
+}
+
+@keyframes idle {
+    0% {opacity: 1;}
+    100% {opacity: 1;}
 }
