--- a/Homepage/Homepage/style2.css
+++ b/Homepage/Homepage/style2.css
@@ -1,5 +1,5 @@
 body {
-    background-color: rgba(221, 0, 255, 0.427);
+    background-color: rgb(43, 43, 43);
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
