--- a/Homepage/Games/notecard-inc/Style.css
+++ b/Homepage/Games/notecard-inc/Style.css
@@ -22,6 +22,21 @@
     opacity: 0;
 }
 
+#firemeter {
+    background-color: red;
+    border-radius: 10px;
+    width: 0px;
+    height: 20px;
+}
+
+#subtext{
+    display: none;
+}
+
+#nps:hover + #subtext{
+    display: block;
+    color: blue;
+}
 @keyframes fadeIn {
     0% {opacity: 0;}
     100% {opacity: 1;}
